# rcpsp

./: Cargo.toml
resources/KSD15/: j30_10_1.rcp
resources/j120/: opt
resources/j30/: opt
resources/j60/: opt
resources/j90/: opt
src/: heuristics.rs  instance.rs  main.rs  model.rs  relax.rs  state.rs
