[package]
name = "rcpsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddo = { git = "https://github.com/vcoppe/ddo", branch = "combined-transition" }
clap = { version = "4.1.4", features = ["derive"] }
fixedbitset = "0.4.2"
